--- a/main.html
+++ b/main.html
@@ -8,7 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	Name: <input type="text" id="name" placeholder="Name" required="Yes">
+	<br><br>
+    	Email: <input type="email" id="email" placeholder="Email" required="Yes"> 
+	<br><br>
+		Gender: <input type="radio" id="gender_m,gender_f" required="Yes"> 
+	<br><br>
+		Car Brands: <input type="select" id="cars" placeholder="please choose an option" required="Yes">
+	<br><br>
+		Age: <input type="Number" id="age" placeholder="Age" required="Yes">
+	<br><br>
+		DOB: <input type="Date" id="dob" required="Yes">
+	<br><br>
+		Phone Number: <input type="Tel" id="tel" placeholder="xxx-xxx-xxxx" required="No">
+	<br><br>
+	   Password: <input type="Password" id="password" placeholder="Password" required="Yes">
+	<br><br>
+		I agree to the TOS: <input type="text" id="name" placeholder="Name" required="Yes">
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
