--- a/main.html
+++ b/main.html
@@ -8,23 +8,44 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	Name: <input type="text" id="name" placeholder="Name" required="Yes">
+<label for ="uname"> Username:</label>
+<input type="text" id="name" placeholder="Name" required="Yes">
+<br><br>
+	
+   <label for ="email"> Email:</label>
+	<input type="email" id="email" placeholder="Email" required="Yes"> 
 	<br><br>
-    	Email: <input type="email" id="email" placeholder="Email" required="Yes"> 
+
+	<label for ="gender"> Gender:</label>
+	<input type="radio" id="gender_m,gender_f" required="Yes"> 
 	<br><br>
-		Gender: <input type="radio" id="gender_m,gender_f" required="Yes"> 
+	
+    <label for ="car brands"> Car Brands:</label>
+   <input type="select" id="cars" placeholder="please choose an option" required="Yes">
 	<br><br>
-		Car Brands: <input type="select" id="cars" placeholder="please choose an option" required="Yes">
+
+	
+<label for ="age"> Age:</label>
+<input type="Number" id="age" placeholder="Age" required="Yes">
 	<br><br>
-		Age: <input type="Number" id="age" placeholder="Age" required="Yes">
+
+
+<label for ="dob"> DOB:</label>
+<input type="Date" id="dob" required="Yes">
 	<br><br>
-		DOB: <input type="Date" id="dob" required="Yes">
+
+
+<label for ="phone number"> Phone Number:</label>
+	<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx" required="No">
 	<br><br>
-		Phone Number: <input type="Tel" id="tel" placeholder="xxx-xxx-xxxx" required="No">
+
+	
+   <label for ="password"> Password:</label>
+	<input type="Password" id="password" placeholder="Password" required="Yes">
 	<br><br>
-	   Password: <input type="Password" id="password" placeholder="Password" required="Yes">
-	<br><br>
-		I agree to the TOS: <input type="text" id="name" placeholder="Name" required="Yes">
+	
+	I agree to the TOS: 
+	<input type="text" id="name" placeholder="Name" required="Yes">
 	
 	<script type="text/javascript" src="./script.js">
 </script>
