--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<label for ="uname"> Username:</label>
+<label for ="name">Name:</label>
 <input type="text" id="name" placeholder="Name" required="Yes">
 <br><br>
 	
@@ -17,12 +17,17 @@
 	<br><br>
 
 	<label for ="gender"> Gender:</label>
-	<input type="radio" id="gender_m,gender_f" required="Yes"> 
-	<br><br>
+   Male <input type ="radio" id ="gender_m" required="Yes">
+   Female <input type ="radio" id ="gender_f" required="Yes">
+  <br><br>
 	
     <label for ="car brands"> Car Brands:</label>
-   <input type="select" id="cars" placeholder="please choose an option" required="Yes">
-	<br><br>
+   <select  type ="select" id="cars" placeholder="please choose an option" required="Yes">>
+            <option value="apple">BMW</option>
+            <option value="samsung">Swift</option>
+            <option value="oneplus">Swift VDI</option>
+         </select>
+         <br><br>
 
 	
 <label for ="age"> Age:</label>
@@ -44,9 +49,9 @@
 	<input type="Password" id="password" placeholder="Password" required="Yes">
 	<br><br>
 	
-	I agree to the TOS: 
-	<input type="text" id="name" placeholder="Name" required="Yes">
-	
+	I agree to the TOS <input type =" checkbox" id="tos" type="checkbox">
+         <br><br>
+
 	<script type="text/javascript" src="./script.js">
 </script>
 
