--- a/main.html
+++ b/main.html
@@ -9,20 +9,20 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form method="post">
-<label for ="name">Name:</label>
+<label for ="name">Name</label>
 <input type="text" id="name" placeholder="Name" required="Yes">
 <br><br>
 	
-   <label for ="email"> Email:</label>
+   <label for ="email"> Email</label>
 	<input type="email" id="email" placeholder="Email" required="Yes"> 
 	<br><br>
 
-	<label for ="gender"> Gender:</label>
+	<label for ="gender"> Gender</label>
    Male <input type ="radio" id ="gender_m" required="Yes" name="gender">
    Female <input type ="radio" id ="gender_f" required="Yes" name="gender">
   <br><br>
 	
-    <label for ="car brands"> Car Brands:</label>
+    <label for ="car brands"> Car Brands</label>
    <select  type ="select" id="cars" placeholder="please choose an option" required="Yes">>
             <option value="apple">BMW</option>
             <option value="samsung">Swift</option>
@@ -31,22 +31,22 @@
          <br><br>
 
 	
-<label for ="age"> Age:</label>
+<label for ="age"> Age</label>
 <input type="Number" id="age" placeholder="Age" required="Yes">
 	<br><br>
 
 
-<label for ="dob"> DOB:</label>
+<label for ="dob"> DOB</label>
 <input type="Date" id="dob" required="Yes">
 	<br><br>
 
 
-<label for ="phone number"> Phone Number:</label>
+<label for ="phone number"> Phone Number</label>
 	<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx" required="No">
 	<br><br>
 
 	
-   <label for ="password"> Password:</label>
+   <label for ="password"> Password</label>
 	<input type="Password" id="password" placeholder="Password" required="Yes">
 	<br><br>
 	
