--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   <br><br>
 	
     <label for ="car brands"> Car Brands</label>
-   <select  type ="select" id="cars" placeholder="please choose an option" required="Yes">>
+   <select  type ="select" id="cars" placeholder="please choose an option" required="Yes">
             <option value="apple">BMW</option>
             <option value="samsung">Swift</option>
             <option value="oneplus">Swift VDI</option>
