--- a/main.html
+++ b/main.html
@@ -8,22 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Signup Form</h1>
 	<form action ="#" method="post">
 <label for ="name">Name</label>
-<input type="text" id="name" placeholder="Name" required="Yes">
+<input type="text" id="name" placeholder="Name" required>
 <br><br>
 	
    <label for ="email"> Email</label>
-	<input type="email" id="email" placeholder="Email" required="Yes"> 
+	<input type="email" id="email" placeholder="Email" required> 
 	<br><br>
 
 	<label for ="gender"> Gender</label>
-   Male <input type ="radio" id ="gender_m" required="Yes" name="gender">
-   Female <input type ="radio" id ="gender_f" required="Yes" name="gender">
+   Male <input type ="radio" id ="gender_m" required name="gender">
+   Female <input type ="radio" id ="gender_f" required name="gender">
   <br><br>
 	
     <label for ="car brands"> Car Brands</label>
-   <select  type ="select" id="cars" placeholder="please choose an option" required="Yes">
+   <select  type ="select" id="cars" placeholder="please choose an option" required>
             <option value="apple">BMW</option>
             <option value="samsung">Swift</option>
             <option value="oneplus">Swift VDI</option>
@@ -32,22 +33,22 @@
 
 	
 <label for ="age"> Age</label>
-<input type="Number" id="age" placeholder="Age" required="Yes">
+<input type="Number" id="age" placeholder="Age" required>
 	<br><br>
 
 
 <label for ="dob"> DOB</label>
-<input type="Date" id="dob" required="Yes">
+<input type="Date" id="dob" required>
 	<br><br>
 
 
 <label for ="phone number"> Phone Number</label>
-	<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx" required="No">
+	<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx">
 	<br><br>
 
 	
    <label for ="password"> Password</label>
-	<input type="Password" id="password" placeholder="Password" required="Yes">
+	<input type="Password" id="password" placeholder="Password" required>
 	<br><br>
 	
 	<label for="i agree">I agree to the TOS </label>
