--- a/main.html
+++ b/main.html
@@ -10,34 +10,36 @@
 	<!-- the entire body must be written by student -->
 	<h1>Signup Form</h1>
 	<form action ="#" method="post">
-<label for ="name">Name</label>
+<label for ="name">Name :</label>
 <input type="text" id="name" placeholder="Name" required>
 <br><br>
 	
-   <label for ="email"> Email</label>
+   <label for ="email"> Email :</label>
 	<input type="email" id="email" placeholder="Email" required> 
 	<br><br>
 
-	<label for ="gender"> Gender</label>
+	<label> Gender :</label>
    Male <input type ="radio" id ="gender_m" required name="gender">
    Female <input type ="radio" id ="gender_f" required name="gender">
   <br><br>
 	
-    <label for ="car brands"> Car Brands</label>
-   <select  type ="select" id="cars" placeholder="please choose an option" required>
-            <option value="apple">BMW</option>
-            <option value="samsung">Swift</option>
-            <option value="oneplus">Swift VDI</option>
-         </select>
+    <label for="cars">Car Brands:</label>
+    <select id="cars" name="cars" required>
+      <option value="" disabled selected>--Please choose an option--</option>
+      <option value="Toyota">Toyota</option>
+      <option value="Ford">Ford</option>
+      <option value="BMW">BMW</option>
+      <option value="Tesla">Tesla</option>
+    </select>
          <br><br>
 
 	
-<label for ="age"> Age</label>
+<label for ="age"> Age :</label>
 <input type="Number" id="age" placeholder="Age" required>
 	<br><br>
 
 
-<label for ="dob"> DOB</label>
+<label for ="dob"> DOB :</label>
 <input type="Date" id="dob" required>
 	<br><br>
 
