--- a/main.html
+++ b/main.html
@@ -9,20 +9,28 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Signup Form</h1>
-	<form action ="#" method="post">
-<label for ="name">Name :</label>
-<input type="text" id="name" placeholder="Name" required>
-<br><br>
-	
-   <label for ="email"> Email :</label>
-	<input type="email" id="email" placeholder="Email" required> 
-	<br><br>
 
-	<label> Gender :</label>
-   Male <input type ="radio" id ="gender_m" required name="gender">
-   Female <input type ="radio" id ="gender_f" required name="gender">
-  <br><br>
-	
+  <form action="#" method="POST">
+
+    <!-- Name -->
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Name" required>
+    <br><br>
+
+    <!-- Email -->
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Email" required>
+    <br><br>
+
+    <!-- Gender -->
+    <label>Gender:</label>
+    <input type="radio" id="gender_m" name="gender" value="male" required>
+    <label for="gender_m">Male</label>
+    <input type="radio" id="gender_f" name="gender" value="female" required>
+    <label for="gender_f">Female</label>
+    <br><br>
+
+    <!-- Car Brands -->
     <label for="cars">Car Brands:</label>
     <select id="cars" name="cars" required>
       <option value="" disabled selected>--Please choose an option--</option>
@@ -31,31 +39,37 @@
       <option value="BMW">BMW</option>
       <option value="Tesla">Tesla</option>
     </select>
-         <br><br>
+    <br><br>
 
-	
-<label for ="age"> Age :</label>
-<input type="Number" id="age" placeholder="Age" required>
-	<br><br>
+    <!-- Age -->
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" placeholder="Age" required>
+    <br><br>
 
+    <!-- DOB -->
+    <label for="dob">DOB:</label>
+    <input type="date" id="dob" name="dob" required>
+    <br><br>
 
-<label for ="dob"> DOB :</label>
-<input type="Date" id="dob" required>
-	<br><br>
+    <!-- Phone Number -->
+    <label for="tel">Phone Number:</label>
+    <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx">
+    <br><br>
 
+    <!-- Password -->
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Password" required>
+    <br><br>
 
-<label for ="phone number"> Phone Number</label>
-	<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx">
-	<br><br>
+    <!-- TOS -->
+    <input type="checkbox" id="tos" name="tos" required>
+    <label for="tos">I agree to the TOS</label>
+    <br><br>
 
-	
-   <label for ="password"> Password</label>
-	<input type="Password" id="password" placeholder="Password" required>
-	<br><br>
-	
-	<label for="i agree">I agree to the TOS </label>
-	<input type =" checkbox" id="tos" type="checkbox">
-  <br><br>
+    <!-- Submit Button -->
+    <button type="submit">Submit</button>
+
+ 
 
 	<script type="text/javascript" src="./script.js">
 </script>
